// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`runPlop simple: README.md 1`] = `
"<header>
  <h1 align="center">
    <a href="https://github.com/guanghechen/guanghechen/tree/main/packages/waw#readme">@guanghechen/waw</a>
  </h1>
  <div align="center">
    <a href="https://www.npmjs.com/package/@guanghechen/waw">
      <img
        alt="Npm Version"
        src="https://img.shields.io/npm/v/@guanghechen/waw.svg"
      />
    </a>
    <a href="https://www.npmjs.com/package/@guanghechen/waw">
      <img
        alt="Npm Download"
        src="https://img.shields.io/npm/dm/@guanghechen/waw.svg"
      />
    </a>
    <a href="https://www.npmjs.com/package/@guanghechen/waw">
      <img
        alt="Npm License"
        src="https://img.shields.io/npm/l/@guanghechen/waw.svg"
      />
    </a>
    <a href="#install">
      <img
        alt="Module Formats: cjs, esm"
        src="https://img.shields.io/badge/module_formats-cjs%2C%20esm-green.svg"
      />
    </a>
    <a href="https://github.com/nodejs/node">
      <img
        alt="Node.js Version"
        src="https://img.shields.io/node/v/@guanghechen/waw"
      />
    </a>
    <a href="https://github.com/prettier/prettier">
      <img
        alt="Code Style: prettier"
        src="https://img.shields.io/badge/code_style-prettier-ff69b4.svg?style=flat-square"
      />
    </a>
  </div>
</header>
<br/>


Some descriptions.

## Install

* npm

  \`\`\`bash
  npm install --save-dev @guanghechen/waw
  \`\`\`

* yarn

  \`\`\`bash
  yarn add --dev @guanghechen/waw
  \`\`\`

## Usage


## Related


[homepage]: https://github.com/guanghechen/guanghechen/tree/main/packages/waw#readme
"
`;

exports[`runPlop simple: console 1`] = `
[
  [
    {
      "cwd": "<WORKSPACE>/output",
      "isMonorepo": true,
      "nickname": "jojo",
      "packageAuthor": "guanghechen",
      "packageDescription": "Some descriptions",
      "packageLocation": "packages/waw",
      "packageName": "@guanghechen/waw",
      "packageUsage": "Some descriptions.",
      "packageVersion": "1.0.0-alpha",
      "repositoryHomepage": "https://github.com/guanghechen/guanghechen/tree/main/packages/waw#readme",
      "repositoryName": "guanghechen",
      "toolPackageVersion": "1.0.0-alpha",
    },
  ],
]
`;

exports[`runPlop simple: rollup.config.js 1`] = `
"import createRollupConfig from '@guanghechen/rollup-config'
import manifest from './package.json'

const config = createRollupConfig({
  manifest,
  pluginOptions: {
    typescriptOptions: { tsconfig: 'tsconfig.src.json' },
  },
})

export default config
"
`;

exports[`runPlop simple: src/index.ts 1`] = `
"/**
 * Say hello.
 * @param name
 */
export function greet(name: string): void {
  console.log(\`Hello, \${name}!\`)
}
"
`;

exports[`runPlop simple: tsconfig.json 1`] = `
"{
  "extends": "./tsconfig.settings",
  "include": ["src", "script", "__test__"]
}
"
`;

exports[`runPlop simple: tsconfig.settings.json 1`] = `
"{
  "compilerOptions": {
    "allowSyntheticDefaultImports": true,
    "alwaysStrict": true,
    "declaration": true,
    "declarationMap": false,
    "downlevelIteration": true,
    "esModuleInterop": true,
    "experimentalDecorators": true,
    "forceConsistentCasingInFileNames": true,
    "moduleResolution": "node",
    "newLine": "LF",
    "noEmit": false,
    "noEmitOnError": true,
    "noImplicitAny": true,
    "noImplicitReturns": false,
    "noImplicitThis": true,
    "noImplicitUseStrict": false,
    "noUnusedLocals": false,
    "noUnusedParameters": false,
    "pretty": false,
    "removeComments": false,
    "resolveJsonModule": true,
    "sourceMap": false,
    "strict": true,
    "strictFunctionTypes": true,
    "strictNullChecks": true,
    "strictPropertyInitialization": true,
    "suppressImplicitAnyIndexErrors": true,
    "target": "es2015"
  }
}
"
`;

exports[`runPlop simple: tsconfig.src.json 1`] = `
"{
  "extends": "./tsconfig.settings",
  "compilerOptions": {
    "rootDir": "src"
  },
  "include": ["src"]
}
"
`;

exports[`runPrompts npm-package 1`] = `
{
  "cwd": "<WORKSPACE>/output",
  "isMonorepo": true,
  "packageAuthor": "guanghechen",
  "packageDescription": "",
  "packageLocation": "packages/waw",
  "packageName": "@guanghechen/waw",
  "packageUsage": "",
  "packageVersion": "1.0.0-alpha",
  "repositoryHomepage": "https://github.com/guanghechen/guanghechen/tree/main/packages/waw#readme",
  "repositoryName": "guanghechen",
}
`;

exports[`runPrompts npm-package 2`] = `
{
  "cwd": "<WORKSPACE>/output",
  "isMonorepo": true,
  "packageAuthor": "guanghechen",
  "packageDescription": "Some description",
  "packageLocation": "packages/waw2",
  "packageName": "@guanghechen/waw",
  "packageUsage": "Some description.",
  "packageVersion": "1.0.1",
  "repositoryHomepage": "https://github.com/guanghechen/guanghechen/tree/main/packages/waw2#readme",
  "repositoryName": "guanghechen",
}
`;

exports[`runPrompts npm-package 3`] = `
{
  "cwd": "<WORKSPACE>/output",
  "isMonorepo": true,
  "packageAuthor": "guanghechen",
  "packageDescription": "",
  "packageLocation": "packages/waw",
  "packageName": "@guanghechen/waw",
  "packageUsage": "",
  "packageVersion": "1.0.0-alpha",
  "repositoryHomepage": "https://github.com/guanghechen/guanghechen/tree/main/packages/waw#readme",
  "repositoryName": "guanghechen",
}
`;
